--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <a href="./act1/dist/index.html">Actividad 1</a>
+  <a href="./valinlla-js-side-scroller-game/index.html">Un juego cool</a>
 </body>
 </html>
